20160602 Files LabPC couldn't commit & push

--- a/index1.html
+++ b/index1.html
@@ -67,7 +67,7 @@
         point[11][0] = new Array("111", "110", "101", "011", "001", "010", "100", "000");   // 音源減っていく
                 
         var audioFile1 = new Array();
-        audioFile1[0]  = "sound/outside/1c/1c_sw";
+        audioFile1[0]  = "sound/ALPstream/outside/1c/1c_sw";
         audioFile1[1]  = "sound/3srcs/ho1000_sp_f120_sp_m240_sw";
         audioFile1[2]  = "sound/outside/2b/2b_sw";
         audioFile1[3]  = "sound/outside/1b/1b_sw";
