--- a/index1.html
+++ b/index1.html
@@ -16,8 +16,14 @@
     <script type="text/javascript" src="fileLink.js"></script>
 
     <script type="text/javascript">
-        var DEBUG_MODE = true;
-
+        var DEBUG_MODE = true;   // Debug or NOT
+        /* Parameters */
+        var audioPlaying = new Array(false, false);   // Playing or not
+        var cmpNum = 2;   // Number of compared data
+        var filePlaying = 0;   // # of playing question
+        var playNum = new Array(0, 0);   // Which pattern is playing ()
+        var ptnPlaying = 0;  // パターン選択回答用
+        var quesNum = new Array(1, 3);   // Number of compared data
         //var trialNum = new Array(10, 10);
         var trialNum = new Array(1, 1);
         var trialTotal = arraySum(trialNum);
@@ -29,13 +35,6 @@
         }
 
         /* Load sound files */
-        var audioPlaying = new Array(false, false);
-        var filePlaying = 0;
-        var playNum = new Array(0, 0);
-        var ptnPlaying = 0;  // パターン選択回答用
-        var ptnAsking = 1;   // 移動有無回答用
-        var AnsFill = 0;
-
         var point = new Array();
         point[0] = new Array();
         point[1] = new Array();
@@ -63,30 +62,16 @@
         /* Arrays to play sound files */
         //for comparison of naturality
         var audioArray1 = new Array();
-        audioArray1[0] = new Array();
-        audioArray1[1] = new Array();
+        for (var n = 0; n < cmpNum; ++n) {
+            audioArray1[n] = new Array();
+        }
         //for comparison of easiness to find
         var audioArray2 = new Array();
-        audioArray2[0] = new Array();
-        audioArray2[1] = new Array();
-        var array = new Array();
-
-        // ------------------------------------------------------------
-        // リッスンを開始する
-        // ------------------------------------------------------------
-        // イベントリスナーに対応している
-        if (document.addEventListener) {
-            // マウスカーソルを移動すると実行されるイベント
-            //document.addEventListener("mousemove", ChangeVolume);
-            // キーボードを押したときに実行されるイベント
-            document.addEventListener("keypress", KeyDownFunc);
-
-            // アタッチイベントに対応している
-        } else if (document.attachEvent) {
-            // マウスカーソルを移動すると実行されるイベント
-            //document.attachEvent("onmousemove", ChangeVolume);
-            // キーボードを押したときに実行されるイベント
-            document.attachEvent("onkeydown", KeyDownFunc);
+        for (var n = 0; n < cmpNum; ++n) {
+            audioArray2[n] = new Array();
+            for (var m = 0; m < ptnNum; ++m) {
+                audioArray2[n][m] = new Array();
+            }
         }
     </script>
 </head>
@@ -132,14 +117,14 @@
     <!--Naturality evalation-->
     <form name="selectbox">
         <p class="lowHigh">Q. 聞こえ方を比べやすいのはどちらでしたか？</p>
-        <select id="selectNtr01" onchange="saveAns2Array1(1)">
+        <select id="selectNtr01" onchange="saveAns2Array1()">
             <option value="">*選んでください</option>
             <option value="1">#1</option>
             <option value="2">#2</option>
         </select>
     </form>
     <!--Save answer in array saving txt-->
-    <button onclick="saveArrayVal1();">Answer1 Save</button>
+    <button onclick="saveArrayVal1(0);">Answer1 Save</button>
     <a id="saveArray" href=""></a>
     <p class="ls_normal"></p>
 
@@ -153,29 +138,29 @@
             <td>
                 <script language="JavaScript">document.write("#1".bold())</script>
                 <button style="width: 70px; height: 50px" onclick="AudioButtonFunc2(0)">Play/Stop</button>
-                <input id="slider11_1" type="range" min="0" max="7" step="1" value="0" onchange="showValue(0)" />
-                <button style="width: 50px; height: 30px" onclick="OkButtonFunc()">OK!</button>
+                <input id="slider02_0" type="range" min="0" max="6" step="1" value="0" onchange="showValue(0)" />
+                <!--<button style="width: 50px; height: 30px" onclick="OkButtonFunc2()">OK!</button>-->
             </td>
             <!--#2-->
             <td>
                 <script language="JavaScript">document.write("#2".bold())</script>
                 <button style="width: 70px; height: 50px" onclick="AudioButtonFunc2(1)">Play/Stop</button>
-                <input id="slider11_2" type="range" min="0" max="7" step="1" value="0" onchange="showValue(1)" />
-                <button style="width: 50px; height: 30px" onclick="OkButtonFunc()">OK!</button>
+                <input id="slider02_1" type="range" min="0" max="6" step="1" value="0" onchange="showValue(1)" />
+                <!--<button style="width: 50px; height: 30px" onclick="OkButtonFunc2()">OK!</button>-->
             </td>
         </tr>
     </table>
     <!--評価回答-->
     <form name="selectbox">
         <p class="lowHigh">Q. 聞こえ方を比べやすいのはどちらでしたか？</p>
-        <select id="selectEf01" onchange="saveAnsFunc(1)">
+        <select id="selectEf02" onchange="saveAns2Array2()">
             <option value="">*選んでください</option>
             <option value="1">#1</option>
             <option value="2">#2</option>
         </select>
     </form>
     <!--結果を書き込み-->
-    <button onclick="saveArrayFunc();">Answer1 Save</button>
+    <button onclick="saveArrayVal2(1);">Answer11 Save</button>
     <a id="saveArray" href=""></a>
     <p class="ls_normal"></p>
     
