--- a/index1.html
+++ b/index1.html
@@ -121,6 +121,7 @@
             <option value="">*選んでください</option>
             <option value="1">#1</option>
             <option value="2">#2</option>
+            <option value="0">どちらも同じ</option>
         </select>
     </form>
     <!--Save answer in array saving txt-->
@@ -157,6 +158,7 @@
             <option value="">*選んでください</option>
             <option value="1">#1</option>
             <option value="2">#2</option>
+            <option value="0">どちらも同じ</option>
         </select>
     </form>
     <!--結果を書き込み-->
