--- a/index1.html
+++ b/index1.html
@@ -53,12 +53,131 @@
         audioFile1[1][0] = "sound/ALPstream/outside/1c/1c_111_100_001_101_011_110_010";
         audioFile1[0][1] = "sound/ALPstream/outside/1c/1c_111_011_001_101_100_110_010";
         audioFile1[1][1] = "sound/ALPstream/outside/1c/1c_111_100_001_101_011_110_010";
-        //for comparison of naturality
+        //for comparison of efficiency
         var audioFile2 = new Array();
         audioFile2[0] = new Array();
         audioFile2[1] = new Array();
-        audioFile2[0][0] = "sound/outside/1c/1c_sw";
-        audioFile2[1][0] = "sound/outside/1c/1c_sw";
+        audioFile2[0][0] = "sound/outside/2c/2c_sw";
+        audioFile2[1][0] = audioFile2[0][0];
+        audioFile2[0][1] = "sound/outside/2c/2c_sw";
+        audioFile2[1][1] = audioFile2[0][1];
+        audioFile2[0][2] = "sound/outside/2c/2c_sw";
+        audioFile2[1][2] = audioFile2[0][2];
+        audioFile2[0][3] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][3] = audioFile2[0][3];
+        audioFile2[0][4] = "sound/outside/2c/2c_sw";
+        audioFile2[1][4] = audioFile2[0][4];
+        audioFile2[0][5] = "sound/outside/2c/2c_sw";
+        audioFile2[1][5] = audioFile2[0][5];
+        audioFile2[0][6] = "sound/outside/1c/1c_sw";
+        audioFile2[1][6] = audioFile2[0][6];
+        audioFile2[0][7] = "sound/outside/1c/1c_sw";
+        audioFile2[1][7] = audioFile2[0][7];
+        audioFile2[0][8] = "sound/outside/2c/2c_sw";
+        audioFile2[1][8] = audioFile2[0][8];
+        audioFile2[0][9] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][9] = audioFile2[0][9];
+        audioFile2[0][10] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][10] = audioFile2[0][10];
+        audioFile2[0][11] = "sound/outside/1c/1c_sw";
+        audioFile2[1][11] = audioFile2[0][11];
+        audioFile2[0][12] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][12] = audioFile2[0][12];
+        audioFile2[0][13] = "sound/outside/2c/2c_sw";
+        audioFile2[1][13] = audioFile2[0][13];
+        audioFile2[0][14] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][14] = audioFile2[0][14];
+        audioFile2[0][15] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][15] = audioFile2[0][15];
+        audioFile2[0][16] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][16] = audioFile2[0][16];
+        audioFile2[0][17] = "sound/outside/2c/2c_sw";
+        audioFile2[1][17] = audioFile2[0][17];
+        audioFile2[0][18] = "sound/outside/2c/2c_sw";
+        audioFile2[1][18] = audioFile2[0][18];
+        audioFile2[0][19] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][19] = audioFile2[0][19];
+        audioFile2[0][20] = "sound/outside/2c/2c_sw";
+        audioFile2[1][20] = audioFile2[0][20];
+        audioFile2[0][21] = "sound/outside/1c/1c_sw";
+        audioFile2[1][21] = audioFile2[0][21];
+        audioFile2[0][22] = "sound/outside/1c/1c_sw";
+        audioFile2[1][22] = audioFile2[0][22];
+        audioFile2[0][23] = "sound/outside/1c/1c_sw";
+        audioFile2[1][23] = audioFile2[0][23];
+        audioFile2[0][24] = "sound/outside/2c/2c_sw";
+        audioFile2[1][24] = audioFile2[0][24];
+        audioFile2[0][25] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][25] = audioFile2[0][25];
+        audioFile2[0][26] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][26] = audioFile2[0][26];
+        audioFile2[0][27] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][27] = audioFile2[0][27];
+        audioFile2[0][28] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][28] = audioFile2[0][28];
+        audioFile2[0][29] = "sound/outside/2c/2c_sw";
+        audioFile2[1][29] = audioFile2[0][29];
+        audioFile2[0][30] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][30] = audioFile2[0][30];
+        audioFile2[0][31] = "sound/outside/1c/1c_sw";
+        audioFile2[1][31] = audioFile2[0][31];
+        audioFile2[0][32] = "sound/outside/2c/2c_sw";
+        audioFile2[1][32] = audioFile2[0][32];
+        audioFile2[0][33] = "sound/outside/2c/2c_sw";
+        audioFile2[1][33] = audioFile2[0][33];
+        audioFile2[0][34] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][34] = audioFile2[0][34];
+        audioFile2[0][35] = "sound/outside/2c/2c_sw";
+        audioFile2[1][35] = audioFile2[0][35];
+        audioFile2[0][36] = "sound/outside/1c/1c_sw";
+        audioFile2[1][36] = audioFile2[0][36];
+        audioFile2[0][37] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][37] = audioFile2[0][37];
+        audioFile2[0][38] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][38] = audioFile2[0][38];
+        audioFile2[0][39] = "sound/outside/1c/1c_sw";
+        audioFile2[1][39] = audioFile2[0][39];
+        audioFile2[0][40] = "sound/outside/1c/1c_sw";
+        audioFile2[1][40] = audioFile2[0][40];
+        audioFile2[0][41] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][41] = audioFile2[0][41];
+        audioFile2[0][42] = "sound/outside/1c/1c_sw";
+        audioFile2[1][42] = audioFile2[0][42];
+        audioFile2[0][43] = "sound/outside/1c/1c_sw";
+        audioFile2[1][43] = audioFile2[0][43];
+        audioFile2[0][44] = "sound/outside/1c/1c_sw";
+        audioFile2[1][44] = audioFile2[0][44];
+        audioFile2[0][45] = "sound/outside/1c/1c_sw";
+        audioFile2[1][45] = audioFile2[0][45];
+        audioFile2[0][46] = "sound/outside/2c/2c_sw";
+        audioFile2[1][46] = audioFile2[0][46];
+        audioFile2[0][47] = "sound/outside/1c/1c_sw";
+        audioFile2[1][47] = audioFile2[0][47];
+        audioFile2[0][48] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][48] = audioFile2[0][48];
+        audioFile2[0][49] = "sound/outside/1c/1c_sw";
+        audioFile2[1][49] = audioFile2[0][49];
+        audioFile2[0][50] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][50] = audioFile2[0][50];
+        audioFile2[0][51] = "sound/outside/1c/1c_sw";
+        audioFile2[1][51] = audioFile2[0][51];
+        audioFile2[0][52] = "sound/outside/1c/1c_sw";
+        audioFile2[1][52] = audioFile2[0][52];
+        audioFile2[0][53] = "sound/outside/2c/2c_sw";
+        audioFile2[1][53] = audioFile2[0][53];
+        audioFile2[0][54] = "sound/outside/2c/2c_sw";
+        audioFile2[1][54] = audioFile2[0][54];
+        audioFile2[0][55] = "sound/outside/1c/1c_sw";
+        audioFile2[1][55] = audioFile2[0][55];
+        audioFile2[0][56] = "sound/outside/2c/2c_sw";
+        audioFile2[1][56] = audioFile2[0][56];
+        audioFile2[0][57] = "sound/outside/2c/2c_sw";
+        audioFile2[1][57] = audioFile2[0][57];
+        audioFile2[0][58] = "sound/outside/1c/1c_sw";
+        audioFile2[1][58] = audioFile2[0][58];
+        audioFile2[0][59] = "sound/ho1000_sp_f120_sp_m240_sw";
+        audioFile2[1][59] = audioFile2[0][59];
+
         /* Arrays to play sound files */
         //for comparison of naturality
         var audioArray1 = new Array();
