--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         var ptnPlaying = 0;  // パターン選択回答用
         var quesNum = new Array(1, 3);   // Number of compared data
         //var trialNum = new Array(10, 10);
-        var trialNum = new Array(1, 1);
+        var trialNum = new Array(60, 60);
         var trialTotal = arraySum(trialNum);
 
         /* Array to store answers */
@@ -520,6 +520,7 @@
     <a id="saveArray" href=""></a>
     <p class="ls_normal"></p>
     
+    <!-- << LAST >>=========================================================================================== -->
     <!--最後に回答をファイルに保存-->
     <p class="ls_double"><br /></p>
     <button onclick="saveFunc();">FINISH</button>
