--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         Data1の#1から始めてください．<br />
         1. Play/Stopボタンを押すと音が再生されますので，聞きやすい音量になるようPCの音量を調節してください．<br />
         2. #1を聞き終わったらPlay/Stopボタンで一時停止します．聞き直したいときは再度Play/Stopボタンで一時停止を解除できます．音は繰り返し再生されます(繰り返しのときに１秒ほど無音となります)<br />
-        3. 続いて同様に#2を聞きます．Play/Stopボタンで音を止めた後，すぐ下の設問に答えてください．
+        3. 続いて同様に#2を聞きます．Play/Stopボタンで音を止めた後，すぐ下の設問に答えてください．<br />
         4. #1, #2を両方聞いた後，枠の外の質問「聞こえる音の変化に対する違和感が少なかったのはどちらですか？」に答えてください．<br />
         2パターンの音を聞いて，それぞれの音源(人の声，目覚まし時計の音など)の音量の変化の違和感が少なかったほうを選択してください．どちらも同じように変化していると感じた場合は「どちらも同じ」を選択してください<br />
         5. 回答漏れがないか確認してからAnswer Saveボタンを押します．ボタンは1回のみ押してください．また，回答漏れがあると警告が出ますのでその場合は回答をし直して再度ボタンを押してください．<br />
@@ -2499,7 +2499,7 @@
     </form>
     <!--結果を書き込み-->
     <button onclick="saveArrayVal2(1, 1);">Answer Save</button>
-    <a id="saveArray" href=""></a>s
+    <a id="saveArray" href=""></a>
     <p class="ls_normal"></p>
 
     <!-- <<Data 2>>------------------------------------------------------------------------------------------- -->
